--- a/webportal/src/app/create-survey/create-survey.component.html
+++ b/webportal/src/app/create-survey/create-survey.component.html
@@ -1,25 +1,4 @@
-<!--Main Navigation-->
-<header>
-  <nav style="background-color: black;" class="navbar fixed-top navbar-expand-lg navbar-dark pink scrolling-navbar">
-    <a class="navbar-brand" ><strong>Form Builder</strong></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['/create-survey']" routerLinkActive="router-link-active" >Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/create-survey']">List Forms</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-    
-</header>
-<!--Main Navigation-->
+<app-header></app-header>
 <div style="align-items: center; margin-top: 100px;">
   <div class="row">
     <div class="col-md-3">
